:mag: changing tts.google_say in the automations.

--- a/automations/house/alarm/alarm_disarmed.yaml
+++ b/automations/house/alarm/alarm_disarmed.yaml
@@ -13,7 +13,7 @@ action:
   - service: notify.adults    
     data:
       message: Larmet har avaktiverats
-  - service: tts.google_say
+  - service: tts.google_translate_say
     entity_id: media_player.entre_speaker
     data:
       message: Larmet har avaktiverats.
