--- a/automations/house/alarm/away_mode_arming.yaml
+++ b/automations/house/alarm/away_mode_arming.yaml
@@ -10,7 +10,7 @@ action:
     entity_id: media_player.whole_house
     data:
       volume_level: '0.2'
-  - service: tts.google_say
+  - service: tts.google_translate_say
     entity_id: media_player.entre_speaker
     data:
       message: Larmet har aktiverats. Se till så alla fönster och dörrar är stängda.
