--- a/automations/tts/eves_homework.yaml
+++ b/automations/tts/eves_homework.yaml
@@ -13,7 +13,7 @@ condition:
       weekday:
       - tue
 action:
-  - service: tts.google_say
+  - service: tts.google_translate_say
     entity_id: media_player.entre_speaker
     data:
      message: " PÅMINNELSE! Kom ihåg att ta med läxan idag!"
