--- a/configuration.yaml
+++ b/configuration.yaml
@@ -11,5 +11,8 @@ homeassistant:
   - /config/snapshot
 
 
+  
   packages: !include_dir_named components/packages
 alarm_control_panel: !include alarm.yaml
+hacs:
+  token: !secret github_access_token
