--- a/components/telegram_bot/telegram_bot.yaml
+++ b/components/telegram_bot/telegram_bot.yaml
@@ -1,5 +1,6 @@
 platform: polling
 api_key: !secret telegram_api_key
+parse_mode: html
 allowed_chat_ids:
   - 543927188 # Oskar
   - 535882719 # Bella
