--- a/automations/house/frontdoor/camera_motion.yaml
+++ b/automations/house/frontdoor/camera_motion.yaml
@@ -29,3 +29,7 @@ action:
   - delay: '00:00:02'
   - service: script.turn_on
     entity_id: script.entre_camera_snapshot #Snapshot 5
+  - delay: '00:00:02'
+  - service: notify.adults
+    data:
+      message: !secret camera_url_ingress
