--- a/automations/house/frontdoor/doorbell.yaml
+++ b/automations/house/frontdoor/doorbell.yaml
@@ -19,3 +19,7 @@ action:
   - delay: '00:00:02'
   - service: script.turn_on
     entity_id: script.dorrklockan_snapshot #Snapshot 2
+  - delay: '00:00:02'
+  - service: notify.adults
+    data:
+      message: !secret camera_url_ingress
