--- a/lovelace/cameras.yaml
+++ b/lovelace/cameras.yaml
@@ -1,10 +1,11 @@
 title: Surveillance
 icon: mdi:cctv
 panel: true
+background: center / cover no-repeat url("/local/habakgrounds.jpg")
 cards:
   - type: custom:surveillance-card
     thumb_interval: 15
-    update_interval: 2
+    update_interval: 0.5
     cameras:
       - entity: camera.entre
         motion_entity: binary_sensor.unifi_camera
