--- a/lovelace/evenice_room.yaml
+++ b/lovelace/evenice_room.yaml
@@ -1,5 +1,6 @@
 title: Evenice rum
 id: evenice rum
+background: center / cover no-repeat url("/local/habakgrounds.jpg")
 cards:
   - id: 7d54fe6ad20643b2a554eb459e19d39f  # Automatically created id
     type: picture-elements
