--- a/lovelace/system_network.yaml
+++ b/lovelace/system_network.yaml
@@ -1,6 +1,7 @@
 title: System & Nätverk
 id: system_natverk
 icon: mdi:server-network
+background: center / cover no-repeat url("/local/habakgrounds.jpg")
 cards:
   - id: 7c92cd52219548b6a6a6d5ee6088e071  # Automatically created id
     type: entities
