--- a/components/tts/google.yaml
+++ b/components/tts/google.yaml
@@ -1,6 +1,6 @@
 platform: google_translate
 language: sv
 cache: true
-base_url: https://kernehed.duckdns.org:8123
+base_url: !secret google_tts_url
 cache_dir: /tmp/tts
 time_memory: 300
