--- a/automations/notify/evenice_not_home.yaml
+++ b/automations/notify/evenice_not_home.yaml
@@ -4,8 +4,12 @@ trigger:
   platform: zone
   event: leave
   zone: zone.home
-  entity_id: group.devices_evenice
+  entity_id: device_tracker.evenice_iphone
 action:
   - service: notify.adults
     data:
       message: "Evenice har gått hemifrån!"
+  - service: tts.google_translate_say
+    entity_id: media_player.hallen
+    data:
+     message: "Evenice har gått hemifrån!"
