--- a/automations/notify/evenice_mamma.yaml
+++ b/automations/notify/evenice_mamma.yaml
@@ -4,8 +4,12 @@ trigger:
   platform: zone
   event: enter
   zone: zone.mamma
-  entity_id: group.devices_evenice
+  entity_id: device_tracker.evenice_iphone
 action:
   - service: notify.adults
     data:
       message: "Evenice är hos mamma!"
+  - service: tts.google_translate_say
+    entity_id: media_player.hallen
+    data:
+     message: "Evenice är hos mamma!"
