--- a/automations/notify/humidity_basement.yaml
+++ b/automations/notify/humidity_basement.yaml
@@ -6,7 +6,7 @@ trigger:
   entity_id: sensor.philio_technology_corporation_phpat02beu_multisensor_2in1_relative_humidity
   above: '50'
 action:
-  - service: notify.telegram_oskar
+  - service: notify.adults
     data:
       message: Luftfuktigheten har överstigit 50%!
 
