--- a/automations/tts/welcome_home.yaml
+++ b/automations/tts/welcome_home.yaml
@@ -5,10 +5,10 @@ trigger:
     entity_id:
       - device_tracker.oskarstelefon
       - group.bella_devices
-      - person.evenice
+      - group.devices_evenice
     from: 'not_home'
     to: 'home'
-    for: '00:02:00'
+    for: '00:00:10'
 condition:
   condition: time
   after: '07:00:00'
@@ -17,11 +17,11 @@ action:
   - service: script.speech_engine
     data_template:
       personarriving: >-
-       {%- if trigger.entity_id == 'person.bella' -%}
+       {%- if trigger.entity_id == 'group.bella_devices' -%}
          {%- set person = "Bella" -%}
-       {%- elif trigger.entity_id == 'person.oskar' -%}
+       {%- elif trigger.entity_id == 'device_tracker.oskarstelefon' -%}
          {%- set person = "Oskar" -%}
-       {%- elif trigger.entity_id == 'person.evenice' -%}
+       {%- elif trigger.entity_id == 'group.devices_evenice' -%}
          {%- set person = "Evenice" -%}
        {%- else -%}
          {%- set person = "Alla" -%}
@@ -29,19 +29,20 @@ action:
         {%- macro greeting_sentence(person) -%}
           {{ [
              "Välkommen hem " ~ person,
-             "Gissa vem som kommit hem?"  ~ person +" har!",
+             "Gissa vem som kommit hem"  ~ person +" har",
              person + " är nu hemma.",
              "Välkommen hem "  ~ person +".  Vi har saknat dig, eller åtminstone Milla!",
-             "I världen är du bara någon men för någon är du hela världen! Välkommen hem! " ~ person,
-             "Hej där " ~ person + " Välkommen hem!",
-             "Knack Knack. Vem där? "  ~ person +" är!",
-             person ~ "! Du är hemma!",
+             "I världen är du bara någon men för någon är du hela världen. Välkommen hem " ~ person,
+             "Hej där " ~ person + " Välkommen hem",
+             "Knack Knack. Vem där "  ~ person +" är",
+             person ~ "! Du är hemma",
              "Jag vet en hemlighet! "  ~ person +" är hemma!",
-             "Hej "  ~ person +" du har blivit hittad av det smartaste huset på gatan!",
+             "Hej "  ~ person +" du har blivit hittad av det smartaste huset på gatan",
              person + " är nu här.  Hash tag Välkommen hem.",
              person + " är nu här.  Hash tag Hemma.",
              person + " är nu här.  Hash tag Smart hem.",
              person + " är nu här.  Välkommen till Kernehed Manison, mi casa su casa."
           ] | random }}
         {%- endmacro -%}
-        {{- greeting_sentence(person) -}}
+        {{greeting_sentence(person)}}
+      call_inspirational_quote: 1
