--- a/components/groups/devices_adults.yaml
+++ b/components/groups/devices_adults.yaml
@@ -4,5 +4,4 @@ devices_adults:
   - device_tracker.oskarstelefon
   - device_tracker.iphone_7
   - device_tracker.google_maps_103719873476746592925
-  - device_trackker.bellas_telefon
-  - device_tracker.google_maps_103719873476746592925
+  - device_tracker.bellas_telefon
