--- a/components/groups/devices_oskar.yaml
+++ b/components/groups/devices_oskar.yaml
@@ -1,6 +1,6 @@
 devices_oskar:
   name: Enheter oskar
   entities:
-  - device_tracker.oneplus_6
+  - device_tracker.oskarstelefon
   - device_tracker.google_maps_114170795730412573739
   - device_tracker.oskar_mobil
