--- a/scripts/tts/welcome/speech_processing.yaml
+++ b/scripts/tts/welcome/speech_processing.yaml
@@ -3,8 +3,9 @@ speech_processing:
     - service: media_player.volume_set
       entity_id:
         - media_player.hallen
+        - media_player.kitchen_mini
       data:
-        volume_level: 0.3
+        volume_level: 0.2
     - service: media_player.play_media
       data_template:
         entity_id: '{{ media_player }}'
