--- a/automations/tts/welcome_home.yaml
+++ b/automations/tts/welcome_home.yaml
@@ -46,3 +46,4 @@ action:
         {%- endmacro -%}
         {{greeting_sentence(person)}}
       call_inspirational_quote: 1
+      call_responsibilities: 1
