--- a/automations/house/frontdoor/unlock_lock.yaml
+++ b/automations/house/frontdoor/unlock_lock.yaml
@@ -3,7 +3,9 @@ initial_state: 'on'
 trigger:
   platform: state
   entity_id: 
-  - group.devices_adults
+    - group.devices_bella
+    - device_tracker.oskarstelefon
+    - group.devices_evenice
   from: 'not_home'
   to: 'home'
 action:
