--- a/automations/lights/turn_on_lights_when_sunset.yaml
+++ b/automations/lights/turn_on_lights_when_sunset.yaml
@@ -14,8 +14,11 @@ condition:
   after: sunset
   after_offset: "-01:30:00"
 action:
-  service: light.turn_on
-  entity_id:
-  - group.light_hallen
-  - light.vardagsrum_spotlights
-  - light.vardagsrum_trapp
+  - service: light.turn_on
+    entity_id:
+    - group.light_hallen
+    - light.vardagsrum_spotlights
+    - light.vardagsrum_trapp
+  - service: script.speech_engine
+    data:
+      call_dark_outside: 1
